#67 discussion point on simple interface
note and info button

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1490,6 +1490,8 @@
             {
                 document.getElementById("additional-info_" + i).querySelector("#select-options_nr-1").style.display = "none";
                 document.getElementById("additional-info_" + i).querySelector("#select-options_nr-2").style.display = "none";
+
+                // Todo define if note and info button should also be removed
             }
 
             /*       
