--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1228,24 +1228,6 @@
         }
     }
 
-    function reset_settings()
-    {
-        document.getElementById("weight-slider").value = 1;
-        document.getElementById("reps-slider").value = 1;
-        document.getElementById("sets-slider").value = 1;
-        document.getElementById("maxrep-slider").value = 1;
-
-        document.getElementById("weight-slider-button").innerHTML = "Weight Faktor: " + 1 + " &nbsp&nbsp&nbsp";
-        document.getElementById("reps-slider-button").innerHTML = "Reps Faktor: " + 1 + " &nbsp";
-        document.getElementById("sets-slider-button").innerHTML = "Sets Faktor: " + 1 + " &nbsp";
-        document.getElementById("maxrep-slider-button").innerHTML = "MaxRep Faktor: " + 1 + " &nbsp";
-
-        document.getElementById("weight_box").checked = true;
-        document.getElementById("reps_box").checked = true;
-        document.getElementById("sets_box").checked = true;
-        document.getElementById("max_rep_box").checked = false;
-    }
-
     // #67 changed func
     function check_roles(assigned_roles)
     {
@@ -1482,7 +1464,7 @@
         // preferences.check_simple_view = document.getElementById('simplify-ui').checked;
         // preferences.check_chart_type  = document.getElementById('chart-type').checked;        
         // preferences.check_dialog_save = "ignore";     
-// 
+ 
         // preferences.mul_weight = document.getElementById('weight-slider').value;
         // preferences.mul_reps = document.getElementById('reps-slider').value;
         // preferences.mul_sets = document.getElementById('sets-slider').value;
@@ -1568,6 +1550,7 @@
         }
     }
 
+    // #67 newly added func
     function reset_settings()
     {
         document.getElementById("simplify-ui").checked = false;
